minor code cleanup and refactoring of StatusQueueView, esp. updateActions
Change-Id: I7f1c24a27c3357fffdcd5ffa72a82e04815354ce